Creato con Colab

--- a/docs/docs/tutorials/agents.ipynb
+++ b/docs/docs/tutorials/agents.ipynb
@@ -161,7 +161,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import os\n",
+        "os.environ[\"TAVILY_API_KEY\"] = \"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\""
+      ],
+      "metadata": {
+        "id": "mvxqWqqSoJ-z"
+      },
+      "id": "mvxqWqqSoJ-z",
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "id": "86d9386b-442f-4cd6-a78f-57c88249d3f0",
       "metadata": {
         "id": "86d9386b-442f-4cd6-a78f-57c88249d3f0"
